# GidroAtlas

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  file.tsx  install_and_run.bat  package-lock.json  requirements.txt  shadcn_component.html  tmp_nav.txt  water_objects_real_30.csv
backend/: .env.example  Dockerfile  README.md  __init__.py  ai_engine.py  config.py  logic.py  main.py  ml_model.py  model.py  pyproject.toml  requirements.txt  schemas.py  services.py  train_model.py  visualization.py
backend/alembic/: env.py
backend/api/: __init__.py
backend/api/routers/: __init__.py  analysis.py  analytics.py  datasets.py  plots.py
backend/dashboards/: plots.py
backend/data/: generator.py  loader.py  preprocess.py
backend/models/: __init__.py  anomaly.py  evaluation.py  forecast.py  registry.py  trainer.py
backend/models/artifacts/: risk_anomaly.pkl  risk_classifier.pkl  risk_forecaster.pkl
backend/models/artifacts/classifier/: classifier_v20251206110730.pkl  classifier_v20251206115651.pkl  latest.txt
backend/routes/: __init__.py  analyze.py
backend/services/: analytics.py  anomaly_service.py  forecast_service.py  insights.py  risk_service.py
backend/src/app/: main.py
backend/src/app/ai/: config.py  train_model.py
backend/src/app/core/: config.py  deps.py  security.py
backend/src/app/domain/: token.py  user.py  water_object.py
backend/src/app/interfaces/: maps.py
backend/tests/: __init__.py  test_condition_model.py  test_data.py  test_interpretation.py  test_model.py  test_preprocess.py
backend/utils/: logger.py
(+251 files in other folders)
