[project]
name = "gidroatlas-backend"
version = "0.1.0"
description = "FastAPI backend scaffold (clean architecture, Supabase, Alembic, JWT auth)"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.115.5",
  "uvicorn[standard]==0.32.0",
  "pydantic==2.9.2",
  "pydantic-settings==2.4.0",
  "python-jose==3.3.0",
  "bcrypt==4.2.1",
  "alembic==1.14.0",
  "SQLAlchemy==2.0.36",
  "supabase==2.10.0",
  "httpx==0.27.2",
]

[tool.uvicorn]
factory = true

[tool.ruff]
line-length = 100
target-version = "py311"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
